--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,12 +17,13 @@ duel:
   # Время сбора ресурсов после дуэли (в секундах)
   resource-collection-time: 60
 
-# Настройки телепортации
 teleport:
   # Проверять безопасность локации перед телепортацией
   check_safety: true
   # Задержка телепортации при входе (в тиках)
   join_delay: 80
+  # Команда для телепортации на спавн
+  spawn-command: "spawn %player%"  # Используйте здесь команду, телепортирующую в мир spawn
 
 # Настройки арен для дуэлей
 arenas:
@@ -167,6 +168,9 @@ messages:
   winner-returned: "&aВы были возвращены на исходную позицию с собранными вещами."
   flight-disabled: "&cПолет запрещен во время дуэли!"
   duel-started: "&aДуэль началась! Удачи!"
+  cancel-duel-message: "&eДля отмены дуэли нажмите на кнопку ниже в течение &c%time% &eсекунд."
+  cancel-search-button: "&c[Отменить поиск дуэли]"
+  cancel-search-message: "&eДля отмены поиска дуэли нажмите на кнопку ниже в течение &c30 &eсекунд."
   opponent-found: "&eНайден соперник! У вас есть &c8 секунд &eдля отмены дуэли."
   opponent-cancelled: "&cПротивник отменил дуэль!"
   duel-ended: "&aДуэль закончилась! Победитель: &e%winner%"
