--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -167,6 +167,7 @@ messages:
   loser-returned: "&cВы проиграли и были возвращены на исходную позицию."
   winner-returned: "&aВы были возвращены на исходную позицию с собранными вещами."
   flight-disabled: "&cПолет запрещен во время дуэли!"
+  cannot-cancel-started-duel: "&cНельзя отменить дуэль после её начала!"
   duel-started: "&aДуэль началась! Удачи!"
   cancel-duel-message: "&eДля отмены дуэли нажмите на кнопку ниже в течение &c%time% &eсекунд."
   cancel-search-button: "&c[Отменить поиск дуэли]"
