--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -166,19 +166,24 @@ messages:
   prefix: "&x&D&C&8&5&1&4&lR&x&E&0&9&4&1&2&le&x&E&4&A&4&0&F&ls&x&E&8&B&3&0&D&lt&x&E&C&C&2&0&A&lD&x&F&0&D&1&0&8&lu&x&F&4&E&1&0&5&le&x&F&8&F&0&0&3&ll&x&F&C&F&F&0&0&ls &e>>&r "
   loser-returned: "&cВы проиграли и были возвращены на исходную позицию."
   winner-returned: "&aВы были возвращены на исходную позицию с собранными вещами."
+  already-in-countdown: "&cВы не можете начать новый поиск дуэли, так как уже находитесь в подготовке к дуэли!"
+  already-in-search: "&cВы уже находитесь в поиске дуэли! Отмените текущий поиск с помощью /duel cancel."
+  already-in-duel: "&cВы не можете начать поиск дуэли, так как уже участвуете в дуэли!"
   flight-disabled: "&cПолет запрещен во время дуэли!"
   cannot-cancel-started-duel: "&cНельзя отменить дуэль после её начала!"
   duel-started: "&aДуэль началась! Удачи!"
+  cancel-search-message: "&eДля отмены поиска дуэли нажмите на кнопку ниже в течение &c%time% &eсекунд."
+  cancel-search-button: "&c[Отменить поиск дуэли]"
   cancel-duel-message: "&eДля отмены дуэли нажмите на кнопку ниже в течение &c%time% &eсекунд."
-  cancel-search-button: "&c[Отменить дуэль]"
-  cancel-search-message: "&eДля отмены поиска дуэли нажмите на кнопку ниже в течение &c30 &eсекунд."
+  cancel-button: "&c[Выйти с дуэли]"
   opponent-found: "&eНайден соперник! У вас есть &c8 секунд &eдля отмены дуэли."
   opponent-cancelled: "&cПротивник отменил дуэль!"
   duel-ended: "&aДуэль закончилась! Победитель: &e%winner%"
   duel-timeout: "&cВремя дуэли истекло! Вы были возвращены обратно."
   searching: "&eПоиск соперника... &7(%time% сек)"
   no-opponent: "&cСоперник не найден! Вы были возвращены обратно."
-  cancel-button: "&c[Выйти с дуэли]"
+  duel-win: "&aПоздравляем! Вы победили в дуэли!"
+  duel-lose: "&cВы проиграли в дуэли!"
   duel-cancelled: "&cДуэль отменена!"
   player-in-duel: "&cИгрок уже участвует в дуэли!"
   duel-draw: "&eВремя дуэли истекло! &6Объявлена ничья."
